[package]
name = "git-credential-github-apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
http = "0.2"
jsonwebtoken = "9"
octocrab = "0.33"
secrecy = "0.8"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = "0.3"
